--- a/black/css/style.css
+++ b/black/css/style.css
@@ -463,7 +463,7 @@ a.hover-reverse:hover, a.hover-reverse:focus, a.hover-reverse:active {
 .btn.btn-primary {
   border: 2px solid #22eaaa;
   background: #22eaaa;
-  color: #ffffff;
+  color: #000000;
 }
 
 .btn.btn-primary:hover, .btn.btn-primary:active, .btn.btn-primary:focus {
